--- a/SudokuSolver.ConsoleApp/Properties/launchSettings.json
+++ b/SudokuSolver.ConsoleApp/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "SudokuSolver.ConsoleApp": {
       "commandName": "Project",
-      "commandLineArgs": "6..9......3.4.5.1.7.8.1.5..917.6.4......4......4.8.932..5.2.8.6.7.1.4.2......6..1"
+      "commandLineArgs": "..17....2.4...2.......5.7.67...6..5..59...46..6..2...89.3.8.......9...8.4....51.."
     }
   }
 }
