--- a/SudokuSolver.ConsoleApp/Properties/launchSettings.json
+++ b/SudokuSolver.ConsoleApp/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "SudokuSolver.ConsoleApp": {
       "commandName": "Project",
-      "commandLineArgs": "..17....2.4...2.......5.7.67...6..5..59...46..6..2...89.3.8.......9...8.4....51.."
+      "commandLineArgs": ".4...3.8..3..9....5.74..9......2.....23...56.4...5......6..47.8.5..1..4..9.8...1."
     }
   }
 }
